syntax = "proto3";

package tech.atls.files.v1;

import "tech/atls/files/v1/files.payloads.proto";

service FilesService {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse) {}
  rpc CreateUpload (CreateUploadRequest) returns (CreateUploadResponse) {}
  rpc ConfirmUpload (ConfirmUploadRequest) returns (ConfirmUploadResponse) {}
}
